avBooth/accordion-selected-option-directive/accordion-selected-option-directive.less
[avb-accordion-selected-option] {
  cursor: pointer;
  position: relative;
  display: block;
  padding-left: 15px;
  width: 100%;
  clear: both;
  overflow: hidden;

  .opt-data {
    display: block;
    float: left;
    width: 70%;
    min-height: 40px;

    &.hide-link {
      width: 100%;

      .show-remove {
        right: 0%;
      }
    }
  }

  h4 {
    font-weight: bold;
  }

  p.details {
    line-height: 15px !important;
    display: block;
    padding-right: 5px;
    overflow: hidden;
    max-height: 30px;
  }

  a.btn-right {
    display: block;
    float: left;
    width: 26%;
    height: 40px;
    padding-top: 10px;
    margin: 30px 2% 10px 2%;
  }

  .show-value {
    font-weight: normal;
    font-size: 12pt;
  }

  .show-remove {
    display: none;
    padding: 0 10px;
    position: absolute;
    background-color: @brand-danger;
    top: 9px;
    line-height: 16px;
    right: 2%;
  }

  span.label {
    position: absolute;
    top: 9px;
    right: 2%;
  }

  &:hover {
    color: white;
    background-color: @brand-danger;


    span.label {
      display: none;
    }

    .show-remove {
      display: block !important;
    }
  }
}

